fix images overflowing their container

--- a/twitter-feed/src/stylesheets/Tweet.scss
+++ b/twitter-feed/src/stylesheets/Tweet.scss
@@ -10,3 +10,7 @@
 .retweeted {
   color: green;
 }
+
+.media-object img {
+  max-width: 100%;
+}
